Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10908

innodb_zip.bug56680 fails in buildbot with InnoDB: Failing assertion: bpage->id.space() == page_id.space()

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/5998/steps/test_1/logs/stdio

      innodb_zip.bug56680 'xtradb'             w3 [ fail ]
              Test ended at 2016-09-26 23:53:28
       
      CURRENT_TEST: innodb_zip.bug56680
      2016-09-26 23:53:27 0x9d13d740  InnoDB: Assertion failure in thread 2635323200 in file buf0rea.cc line 192
      InnoDB: Failing assertion: bpage->id.space() == page_id.space()
      InnoDB: We intentionally generate a memory trap.
      InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
      InnoDB: If you get repeated assertion failures or crashes, even
      InnoDB: immediately after the mysqld startup, there may be
      InnoDB: corruption in the InnoDB tablespace. Please refer to
      InnoDB: http://dev.mysql.com/doc/refman/5.7/en/forcing-innodb-recovery.html
      InnoDB: about forcing recovery.
      mysqltest got signal 6
      read_command_buf (0x945cb40): INSERT INTO bug56680_2 VALUES(1,_latin1 0xdf,1)
      conn->name (0xa26a1a0): 
      conn->cur_query (0xa34ad30): INSERT INTO bug56680_2 VALUES(1,_latin1 0xdf,1)
      Attempting backtrace...
      stack_bottom = 0x0 thread_stack 0x48c00
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded(my_print_stacktrace+0x32)[0x8269fd5]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x824cc87]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x824ccc5]
      [0xb773f400]
      [0xb773f424]
      /lib/i386-linux-gnu/libc.so.6(gsignal+0x4f)[0xb721b1ef]
      /lib/i386-linux-gnu/libc.so.6(abort+0x175)[0xb721e835]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x8b5f43a]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x8c49726]
      mysys/stacktrace.c:267(my_print_stacktrace)[0x8c4a9b6]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x89a477c]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x89a4b9f]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x8936bb4]
      ut/ut0dbg.cc:68(__static_initialization_and_destruction_0)[0x8c438d8]
      buf/buf0rea.cc:194(buf_read_page_low)[0x8c44de7]
      ibuf/ibuf0ibuf.cc:3696(ibuf_insert_low)[0x8c44f90]
      btr/btr0cur.cc:1140(btr_cur_search_to_nth_level(dict_index_t*, unsigned long, dtuple_t const*, page_cur_mode_t, unsigned long, btr_cur_t*, unsigned long, char const*, unsigned long, mtr_t*))[0x8c454a4]
      row/row0ins.cc:3021(row_ins_sec_index_entry_low(unsigned long, unsigned long, dict_index_t*, mem_block_info_t*, mem_block_info_t*, dtuple_t*, unsigned long long, que_thr_t*, bool))[0x8c45817]
      row/row0ins.cc:3967(row_ins_step(que_thr_t*))[0x8c45e16]
      row/row0mysql.cc:1786(row_insert_for_mysql_using_ins_graph)[0x8b6cd4d]
      row/row0mysql.cc:1917(row_insert_for_mysql(unsigned char const*, row_prebuilt_t*))[0x8b6d2e5]
      /mnt/buildbot/build/mariadb-10.2.2/libmysqld/examples/mysqltest_embedded[0x885f7fe]
      handler/ha_innodb.cc:9117(ha_innobase::write_row(unsigned char*))[0x83058af]
      sql/handler.cc:5923(handler::ha_write_row(unsigned char*))[0x87c05e2]
      sql/sql_insert.cc:1860(write_record(THD*, TABLE*, st_copy_info*))[0x87be38f]
      sql/sql_parse.cc:4320(mysql_execute_command(THD*))[0x8695bda]
      sql/sql_parse.cc:7790(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x869c78b]
      sql/sql_parse.cc:1807(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x869071a]
      libmysqld/lib_sql.cc:169(emb_advanced_command)[0x8299675]
      sql-common/client.c:4061(mysql_send_query)[0x828c7d1]
      client/mysqltest.cc:882(connection_thread)[0x823b7a3]
      /lib/i386-linux-gnu/libpthread.so.0(+0x6d4c)[0xb7722d4c]
      /lib/i386-linux-gnu/libc.so.6(clone+0x5e)[0xb72d7ace]
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.